networks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: default
spec:
  parentRefs:
    - name: eg-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /books
      backendRefs:
        - name: books-service
          namespace: books-app
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /movies
      backendRefs:
        - name: movies-service
          namespace: movies-app
          port: 8081
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-service
          namespace: api-app
          port: 8081
